fix: shuttle bus message overlapping
Extend the `max-height` that the text sections on prefare screens may
take. In de699b6, we updated the styling for "Use shuttle buses",
amongst other bits of text. In the case of alerts where station name(s)
are long (such as "Braintree & Ashmont"), the height of the section was
exceeding the previous `max-height`.

--- a/assets/css/pre_fare/prefare_single_screen_alert.scss
+++ b/assets/css/pre_fare/prefare_single_screen_alert.scss
@@ -114,7 +114,7 @@
   }
 
   .alert-card__content-block__text-sections {
-    max-height: 772px;
+    max-height: 850px;
   }
 
   .alert-card__fallback__icon {
